human-intervention-logs/com.typesafe.netty:netty-reactive-streams:2.0.4/gradle-test/gradle-test-2026-05-03T00-49-06-225865Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: com.typesafe.netty:netty-reactive-streams:2.0.4
Command: `/home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 3 incompatible and 40 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava
/home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/src/test/java/com_typesafe_netty/netty_reactive_streams/Netty_reactive_streamsTest.java:62: error: reference to assertThat is ambiguous
            assertThat(channel.readInbound()).isEqualTo(42);
            ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
/home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/src/test/java/com_typesafe_netty/netty_reactive_streams/Netty_reactive_streamsTest.java:63: error: reference to assertThat is ambiguous
            assertThat(channel.readInbound()).isNull();
            ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
/home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/src/test/java/com_typesafe_netty/netty_reactive_streams/Netty_reactive_streamsTest.java:152: error: reference to assertThat is ambiguous
            assertThat(channel.readOutbound()).isEqualTo("alpha");
            ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
/home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/src/test/java/com_typesafe_netty/netty_reactive_streams/Netty_reactive_streamsTest.java:153: error: reference to assertThat is ambiguous
            assertThat(channel.readOutbound()).isEqualTo("beta");
            ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
/home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/src/test/java/com_typesafe_netty/netty_reactive_streams/Netty_reactive_streamsTest.java:154: error: reference to assertThat is ambiguous
            assertThat(channel.readOutbound()).isNull();
            ^
  both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
  where T is a type-variable:
    T extends Object declared in method <T>assertThat(Predicate<T>)
5 errors

> Task :compileTestJava FAILED


[Incubating] Problems report is available at: file:///home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/src/test/java/com_typesafe_netty/netty_reactive_streams/Netty_reactive_streamsTest.java:62: error: reference to assertThat is ambiguous
              assertThat(channel.readInbound()).isEqualTo(42);
              ^
Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
11 actionable tasks: 1 executed, 10 up-to-date

    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  /home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/src/test/java/com_typesafe_netty/netty_reactive_streams/Netty_reactive_streamsTest.java:63: error: reference to assertThat is ambiguous
              assertThat(channel.readInbound()).isNull();
              ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  /home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/src/test/java/com_typesafe_netty/netty_reactive_streams/Netty_reactive_streamsTest.java:152: error: reference to assertThat is ambiguous
              assertThat(channel.readOutbound()).isEqualTo("alpha");
              ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  /home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/src/test/java/com_typesafe_netty/netty_reactive_streams/Netty_reactive_streamsTest.java:153: error: reference to assertThat is ambiguous
              assertThat(channel.readOutbound()).isEqualTo("beta");
              ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  /home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/tests/src/com.typesafe.netty/netty-reactive-streams/2.0.4/src/test/java/com_typesafe_netty/netty_reactive_streams/Netty_reactive_streamsTest.java:154: error: reference to assertThat is ambiguous
              assertThat(channel.readOutbound()).isNull();
              ^
    both method assertThat(IntPredicate) in Assertions and method <T>assertThat(Predicate<T>) in Assertions match
    where T is a type-variable:
      T extends Object declared in method <T>assertThat(Predicate<T>)
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 25s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3887-0842d41d/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.typesafe.netty:netty-reactive-streams:2.0.4 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 30s
9 actionable tasks: 1 executed, 8 up-to-date
